<resources>
    <!-- Main Section Strings -->
    <string name="app_name">Thermajust</string>
    <string name="action_settings">Settings</string>
    <string name="action_wifi_default">WiFi Default</string>
    <string name="action_help">Help</string>
    <string name="action_credits">Credits</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Title Strings -->
    <string name="title_activity_main__settings__page">Settings</string>
    <string name="title_activity_device__setup_">Device Setup</string>
    <string name="title_activity_device_edit">Edit Device</string>
    <string name="title_activity_group_setup">Group Setup</string>
    <string name="title_activity_schedule_setup">Schedule Setup</string>
    <string name="title_activity_power__setup_">Power Group Setup</string>
    <string name="title_activity_wifi__default">Set WiFi Default</string>
    <string name="title_activity_bluetooth_connect">Connect to Bluetooth Device</string>
    <string name="title_activity_base_controller">Controller</string>
    <string name="title_activity_therm_controller">Controller</string>
    <string name="title_activity_joined_controller">Controller</string>

    <!-- Dialog Strings -->
    <string name="cancel">Cancel</string>
    <string name="deviceGroupCreate">Do you want to create a Device or a Group?</string>
    <string name="controlMethod">Control Method?</string>
    <string name="device">Device</string>
    <string name="group">Group</string>
    <string name="schedule">Schedule</string>
    <string name="power_meter">Power Meter</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="tcp">TCP</string>
    <string name="wifiInfo">WiFi signals available to the Thermajust Unit</string>

    <!-- Setup Strings -->
    <string name="findBluetooth">Find BlueTooth</string>
    <string name="connectBluetoothController">Connect To BT Controller</string>
    <string name="name">Name</string>
    <string name="id">ID Code</string>
    <string name="peripherals">Peripherals - Enable the devices you have attached to your Thermajust</string>
    <string name="title_activity_device__setup">Device_Setup</string>
    <string name="device_name_hint">Enter Preferred Device Name here.</string>
    <string name="peripheral">Peripherals</string>
    <string name="thermometer">Thermometer</string>
    <string name="microphone">Microphone</string>
    <string name="video_camera">Video Camera</string>
    <string name="wifi">WiFi</string>
    <string name="wifi_hint">Enter WiFi Name Here</string>
    <string name="wifi_password">WiFi Password</string>
    <string name="wifi_password_hint">Enter password for given WiFi</string>
    <string name="save">Save</string>

    <!-- Setting Preference Strings -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to controller -->
    <string name="main_power">Main Power</string>

    <!-- Strings related to bluetooth connect -->
    <string name="bluetooth_open">Open Bluetooth Connection</string>
    <string name="bluetooth_send">Send</string>
    <string name="bluetooth_device_control">Control through Bluetooth</string>
    <string name="bluetooth_device_control_specify">Will control device as if it is the one selected.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
